--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^5.12.7",
     "@react-navigation/native": "^5.9.6",
     "@react-navigation/stack": "^5.14.7",
+    "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-constants": "^11.0.1",
     "expo-location": "^12.1.2",
@@ -20,6 +22,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-asyncstorage": "^1.0.0",
+    "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "^0.28.0",
     "react-native-maps-directions": "^1.8.0",
