--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-asyncstorage": "^1.0.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.0",
