Complete User app now..

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
     "@react-native-async-storage/async-storage": "^1.15.6",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^5.12.7",
     "@react-navigation/native": "^5.9.6",
@@ -19,21 +20,26 @@
     "expo-constants": "^11.0.1",
     "expo-location": "^12.1.2",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-asyncstorage": "^1.0.0",
     "react-native-dotenv": "^3.2.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "^0.28.0",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-material-menu": "^2.0.0",
     "react-native-pager-view": "^5.4.0",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.5.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.13.0",
     "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
