--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@react-native-async-storage/async-storage": "^1.15.6",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/drawer": "^5.12.7",
     "@react-navigation/native": "^5.9.6",
     "@react-navigation/stack": "^5.14.7",
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-constants": "^11.0.1",
+    "expo-linear-gradient": "~9.2.0",
     "expo-location": "^12.1.2",
     "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
+    "firebase": "^8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -29,6 +31,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-image-slider-box": "^1.1.8",
     "react-native-maps": "^0.28.0",
     "react-native-maps-directions": "^1.8.0",
     "react-native-material-menu": "^2.0.0",
@@ -40,7 +43,9 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.13.0",
-    "react-navigation-tabs": "^2.11.1"
+    "react-navigation-tabs": "^2.11.1",
+    "react-web-gifted-chat": "^0.6.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
